--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1.0.97"
 clap = "4.5.16"
 colored = "2.1.0"
+dotenv = "0.15.0"
 openai_api_rust = "0.1.9"
 serde = "1.0.209"
 serde_json = "1.0.127"
